ping-pong-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
